--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -12,7 +12,7 @@ primary_dark = "#d9e4ec"
 # Menu
 menu_primary = "#494949"
 menu_text = "#fff"
-menu_text_active = "#328cc1"
+menu_text_active = "#d9e4ec"
 menu_title = "#fff"
 
 # Backgrounds
