--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,8 @@
 # Appearance
 
 appearance:
-  theme_day: "my_theme"
-  theme_night: "my_theme"
+  theme_day: 'my_theme'
+  theme_night: 'my_theme'
   font: minimal
   font_size: M
 
