--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -1,21 +1,22 @@
 # Theme metadata
-name = "my_theme"
+name = "My custom theme"
 
 # Is theme light or dark?
 light = true
 
 # Primary
-primary = "#d9e4ec"
-primary_light = "#d9e4ec"
-primary_dark = "#d9e4ec"
+primary = "#284f7a"
 
 # Menu
-menu_primary = "#494949"
-menu_text = "#fff"
-menu_text_active = "#d9e4ec"
-menu_title = "#fff"
+menu_primary = "#fff"
+menu_text = "#34495e"
+menu_text_active = "#284f7a"
+menu_title = "#2b2b2b"
 
-# Backgrounds
-background = "#fff"
-home_section_odd = "#fff"
-home_section_even = "#f7f7f7"
+# Home sections
+home_section_odd = "rgb(255, 255, 255)"
+home_section_even = "rgb(247, 247, 247)"
+
+[dark]
+  link = "#bbdefb"
+  link_hover = "#bbdefb"
