--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -1,18 +1,18 @@
 # Theme metadata
-name = "my_theme"
+name = "custom"
 
 # Is theme light or dark?
 light = true
 
 # Primary
-primary = "#d9e4ec"
-primary_light = "#d9e4ec"
-primary_dark = "#d9e4ec"
+primary = "#328cc1"
+primary_light = "#328cc1"
+primary_dark = "#DA2536"
 
 # Menu
 menu_primary = "#494949"
 menu_text = "#fff"
-menu_text_active = "#d9e4ec"
+menu_text_active = "#328cc1"
 menu_title = "#fff"
 
 # Backgrounds
