--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -5,14 +5,14 @@ name = "custom"
 light = true
 
 # Primary
-primary = "#328cc1"
-primary_light = "#328cc1"
-primary_dark = "#DA2536"
+primary = "#9DCDCB"
+primary_light = "#9DCDCB"
+primary_dark = "#9DCDCB"
 
 # Menu
 menu_primary = "#494949"
 menu_text = "#fff"
-menu_text_active = "#328cc1"
+menu_text_active = "#9DCDCB"
 menu_title = "#fff"
 
 # Backgrounds
