--- a/data/themes/custom_theme.toml
+++ b/data/themes/custom_theme.toml
@@ -5,7 +5,7 @@ name = "My custom theme"
 light = true
 
 # Primary
-primary = "#284f7a"
+primary = "#9DCDCB"
 
 # Menu
 menu_primary = "#fff"
@@ -16,7 +16,3 @@ menu_title = "#2b2b2b"
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
 home_section_even = "rgb(247, 247, 247)"
-
-[dark]
-  link = "#bbdefb"
-  link_hover = "#bbdefb"
