--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: custom
-  theme_night: custom
-  font: minimal
+  theme_day: custom_theme
+  theme_night: custom_theme
+  font: custom_font
   font_size: M
 
 # SEO
