--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Sofia Scatolin # Website name
-baseURL: 'https://sofiascatolin.netlify.app/' # Website URL
+baseURL: 'https://academicsofia.netlify.app/' # Website URL
 
 ############################
 ## LANGUAGE
